<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ss4.hackathons.MainActivity"
    android:background="#f0f2f4">



    <ScrollView android:id="@+id/profileScrollView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_centerVertical="true"
        >

        <RelativeLayout android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center_vertical">

            <ImageView android:id="@+id/logoIcon"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/icon"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo" />

            <ImageView android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                android:layout_marginBottom="10dp"
               android:layout_below="@+id/logoIcon"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo" />


            <TextView android:textSize="14sp"
                android:id="@+id/error"
                android:textColor="#fa7b7b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/logo"

                />

            <EditText android:textSize="16sp"
                android:textColor="@color/gray_1"
                android:textColorHint="#d1d0d0"
                android:id="@+id/editTextUserName"
                android:background="@drawable/property_list_item_unselected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:maxLength="50"
                android:hint="@string/your_email_id"
                android:layout_below="@+id/error"
                android:inputType="" />

            <EditText android:textSize="16sp"
                android:textColor="@color/gray_1"
                android:textColorHint="#d1d0d0"
                android:id="@+id/editTextPassword"
                android:background="@drawable/property_list_item_unselected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:maxLength="50"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:layout_below="@+id/editTextUserName"/>



            <TextView android:textSize="21sp"
                android:textStyle="normal"
                android:textColor="#FFFAFAFA"
                android:gravity="center"
                android:id="@+id/buttonLogin"
                android:background="#58a5d6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/editTextPassword"
                android:onClick="loginContinue" />

            <RelativeLayout android:gravity="center_horizontal"
                android:id="@+id/loginBelowSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/buttonLogin">

                <TextView android:textSize="14sp"
                    android:id="@+id/logintxtTerms2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_your_password" />
                <TextView android:textSize="14sp"
                    android:textColor="#58a5d6"
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here"
                    android:onClick="forgetPassword"
                    android:layout_toRightOf="@id/logintxtTerms2"
                    android:layout_toEndOf="@id/logintxtTerms2" />
            </RelativeLayout>

            <RelativeLayout android:gravity="center_horizontal"
                android:id="@+id/newUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/loginBelowSection">

                <TextView android:textSize="14sp"
                    android:id="@+id/txtNewUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_new" />
                <TextView android:textSize="14sp"
                    android:textColor="#579ce6"
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:onClick="register"
                    android:layout_toRightOf="@id/txtNewUsers"
                    android:layout_toEndOf="@id/txtNewUsers" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>



